fix: prefetch an item of list
