# example/client/src/core/service/swagger.json
@@ -6,15 +6,23 @@
     "requestBodies": {},
     "responses": {},
     "schemas": {
+      "Account": {
+        "properties": {
+          "id": { "type": "number", "format": "double" },
+          "name": { "type": "string" }
+        },
+        "required": ["id", "name"],
+        "type": "object",
+        "additionalProperties": false
+      },
       "User": {
         "properties": {
           "id": { "type": "number", "format": "double" },
           "email": { "type": "string" },
           "name": { "type": "string" },
-          "status": { "type": "string", "enum": ["Happy", "Sad"] },
-          "phoneNumbers": { "items": { "type": "string" }, "type": "array" }
+          "status": { "type": "string", "enum": ["Happy", "Sad"] }
         },
-        "required": ["id", "email", "name", "phoneNumbers"],
+        "required": ["id", "email", "name"],
         "type": "object",
         "additionalProperties": false
       }
@@ -29,6 +37,26 @@
   },
   "openapi": "3.0.0",
   "paths": {
+    "/accounts": {
+      "get": {
+        "operationId": "GetAccounts",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": { "$ref": "#/components/schemas/Account" },
+                  "type": "array"
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": []
+      }
+    },
     "/users": {
       "get": {
         "operationId": "GetUser",
@@ -59,15 +87,23 @@
       "requestBodies": {},
       "responses": {},
       "schemas": {
+        "Account": {
+          "properties": {
+            "id": { "type": "number", "format": "double" },
+            "name": { "type": "string" }
+          },
+          "required": ["id", "name"],
+          "type": "object",
+          "additionalProperties": false
+        },
         "User": {
           "properties": {
             "id": { "type": "number", "format": "double" },
             "email": { "type": "string" },
             "name": { "type": "string" },
-            "status": { "type": "string", "enum": ["Happy", "Sad"] },
-            "phoneNumbers": { "items": { "type": "string" }, "type": "array" }
+            "status": { "type": "string", "enum": ["Happy", "Sad"] }
           },
-          "required": ["id", "email", "name", "phoneNumbers"],
+          "required": ["id", "email", "name"],
           "type": "object",
           "additionalProperties": false
         }
@@ -82,6 +118,26 @@
     },
     "openapi": "3.0.0",
     "paths": {
+      "/accounts": {
+        "get": {
+          "operationId": "GetAccounts",
+          "responses": {
+            "200": {
+              "description": "Ok",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "items": { "$ref": "#/components/schemas/Account" },
+                    "type": "array"
+                  }
+                }
+              }
+            }
+          },
+          "security": [],
+          "parameters": []
+        }
+      },
       "/users": {
         "get": {
           "operationId": "GetUser",
